--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/train.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/output.css" rel="stylesheet" />
+    <!-- <link href="/src/output.css" rel="stylesheet" /> -->
     <title>SubSurfers UA Open Champ</title>
   </head>
   <body>
